--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
     <!-- start about7 -->
 
     <div id="about7">
-      <p>Copyright © Crafted by <b>Designscrazed</b></p>
+      <p>Copyright © Crafted by <b>Gamed.Gamed</b></p>
     </div>
 
     <!-- end about7 -->
